--- a/src/exmaples/web/cesium/basic/08/examples/pyproject.toml
+++ b/src/exmaples/web/cesium/basic/08/examples/pyproject.toml
@@ -7,4 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "skyfield>=1.48",
     "sgp4>=2.23",
+    "tle2czml>=0.3",
+    "pygeoif<1.0",
+    "setuptools>=80.9.0",
 ]
