--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"react-dom": "^19.2.3",
 		"react-error-boundary": "^6.0.0",
 		"shpjs": "^6.2.0",
+		"sonner": "^2.0.7",
 		"supercluster": "^8.0.1",
 		"three": "^0.182.0",
 		"zustand": "^5.0.9"
