--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"dat.gui": "^0.7.9",
 		"geojson": "^0.5.0",
 		"gsap": "^3.14.2",
+		"hls.js": "^1.6.15",
 		"leva": "^0.10.1",
 		"meshline": "^3.3.1",
 		"prism-react-renderer": "^2.3.0",
