--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"gsap": "^3.14.2",
 		"hls.js": "^1.6.15",
 		"leva": "^0.10.1",
+		"mersenne-twister": "^1.1.0",
 		"meshline": "^3.3.1",
 		"prism-react-renderer": "^2.3.0",
 		"proj4": "^2.20.2",
@@ -58,6 +59,7 @@
 		"sonner": "^2.0.7",
 		"supercluster": "^8.0.1",
 		"three": "^0.182.0",
+		"urijs": "^1.19.11",
 		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
