--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
 		"clsx": "^2.0.0",
 		"d3": "^7.9.0",
 		"dat.gui": "^0.7.9",
+		"date-fns": "^4.1.0",
 		"geojson": "^0.5.0",
+		"globe.gl": "^2.45.0",
 		"gsap": "^3.14.2",
 		"hls.js": "^1.6.15",
 		"leva": "^0.10.1",
@@ -55,10 +57,12 @@
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
 		"react-error-boundary": "^6.0.0",
+		"react-globe.gl": "^2.37.0",
 		"shpjs": "^6.2.0",
 		"sonner": "^2.0.7",
 		"supercluster": "^8.0.1",
 		"three": "^0.182.0",
+		"three-globe": "^2.45.0",
 		"urijs": "^1.19.11",
 		"zustand": "^5.0.9"
 	},
