--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,20 +1,16 @@
-name: Merge Pull Request
+name: Dependabot auto-merge
+on: pull_request
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+permissions:
+  contents: write          
+  pull-requests: write     
 
 jobs:
-  auto-merge:
+  dependabot:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-      contents: write
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
+      - uses: actions/checkout@v3
       - uses: fastify/github-action-merge-dependabot@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
