fix: 调整部署时机为 semantic-release 完成后
- 修改 deploy 条件为在 release 被跳过（bot commit）时执行
- 确保部署的代码包含更新后的 package.json 版本号
- 统一 actions/checkout 版本为 v6

工作流程：
1. 首次提交：build → release（创建版本）→ 跳过 deploy
2. bot commit：build → 跳过 release → deploy（包含新版本号）

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,13 +104,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build, release]
-    # 当 release 成功发布新版本，或者 release 被跳过（bot 提交）且 build 成功时执行部署
+    # 在 semantic-release bot commit 触发的第二次运行中执行部署（此时代码已包含更新后的版本号）
     if: |
-      (needs.release.result == 'success' && needs.release.outputs.new-release-published == 'true') ||
-      (needs.release.result == 'skipped' && needs.build.result == 'success')
+      needs.build.result == 'success' &&
+      needs.release.result == 'skipped'
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
