--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,82 @@
 on:
-  push: # 当用户push代码到代码仓库main分支时触发github action
+  push:
     branches:
       - main
-  schedule: # 定时触发github action
-    - cron: "0 0 */1 * *" # 每天触发一次
-  workflow_dispatch: # GitHub Actions 中的一种触发器，用于手动触发工作流（Workflow）。它允许用户通过 GitHub 界面或 API 手动启动一个工作流，而不是依赖于事件
-permissions:
-  contents: write # 一种最简单的授予github action 写权限的方式
+  workflow_dispatch:
 
-name: Build and Deploy
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
+name: Build and Release
+
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest # 指定运行任务的环境，这里是 ubuntu-latest。
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4 #检出代码仓库。
-        
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0  # semantic-release 需要完整的 git 历史
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: '22'
-          
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
-          
+
       - name: Get pnpm store directory
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-          
+
       - name: Setup pnpm cache
-        uses: actions/cache@v4
+        uses: actions/cache@v5
         with:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-            
+
       - name: Install dependencies
         run: pnpm install
-        
+
       - name: Build project
         run: pnpm build
-        
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4 
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    # 只有非 bot 提交才执行版本发布
+    if: |
+      success() &&
+      !contains(github.actor, '[bot]') &&
+      !contains(github.event.head_commit.author.name, '[bot]')
+    outputs:
+      new-release-published: ${{ steps.semantic.outputs.new-release-published }}
+      new-release-version: ${{ steps.semantic.outputs.new-release-version }}
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
         with:
-          folder: "build"
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Semantic Release
+        id: semantic
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
